Store matrix XP capacity in a data component
Replace the XPMatrixItem subclass with an XP_CAPACITY data component set
as a default on the item Properties. The machine now identifies a matrix
by stack.has(XP_CAPACITY) and reads the value via getOrDefault, so new
capacities need no new classes.

Move tooltip rendering (XP capacity and stored XP) into a client-side
ItemTooltipEvent handler; StoredExp no longer needs TooltipProvider and
XPCocktailItem is gone. Rename the machine powder slot to SLOT_MATRIX.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>